Compliance/gx-compliance-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gx-compliance-main
  namespace: gx-lab
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: gx-compliance-main
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: gx-compliance-main
    spec:
      containers:
      - name: envoy
        image: envoyproxy/envoy-alpine:v1.14.1
        imagePullPolicy: IfNotPresent
        args: ["-l", "debug", "--local-address-ip-version", "v4", "-c", "/run/envoy/envoy.yaml"]
        ports:
        - containerPort: 3001
        volumeMounts:
        - name: envoy-config
          mountPath: "/run/envoy"
          readOnly: true
        - name: spire-agent-socket
          mountPath: /run/spire/sockets
          readOnly: true
      - env:
        - name: jws_wrong
          valueFrom:
            secretKeyRef:
              key: JWS_WRONG
              name: gx-compliance-secrets
        - name: spki
          valueFrom:
            secretKeyRef:
              key: SPKI
              name: gx-compliance-secrets
        - name: privateKey
          valueFrom:
            secretKeyRef:
              key: PRIVATE_KEY
              name: gx-compliance-secrets
        - name: X509_CERT
          valueFrom:
            secretKeyRef:
              key: tls.crt
              name: gx-compliance-server-tls-secret
        - name: REGISTRY_URL
          value: http://localhost:4000
#         value: https://registry.gaia-x.eu // JCH: use local registry
        - name: BASE_URL
          value: https://localhost
#         value: https://compliance.gaia-x.eu
#       - name: SD_STORAGE_BASE_URL
#         value: https://example-storage.lab.gaia-x.eu
#       - name: SD_STORAGE_API_KEY
#         value: #ADD
#       Debug support. Uncomment the below for production
        - name: DEBUG
          value: "*"
        - name: NODE_ENV
          value: dev
        image: registry.gitlab.com/gaia-x/lab/compliance/gx-compliance:main
        imagePullPolicy: IfNotPresent
        name: gx-compliance-main
        ports:
        - containerPort: 3000
          name: http-api
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      volumes:
      - name: envoy-config
        configMap:
          name: compliance-envoy
      - name: spire-agent-socket
        hostPath:
          path: /run/spire/sockets
          type: Directory
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
