Compliance/gx-compliance-main-svc-direct.yaml
apiVersion: v1
kind: Service
metadata:
  name: gx-compliance-main-direct
  namespace: gx-lab
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3002
  selector:
    app: gx-compliance-main
  sessionAffinity: None
  type: ClusterIP
