Compliance/gx-compliance-main-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gx-compliance-main
  namespace: gxdch
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3001
  selector:
    app: gx-compliance-main
  sessionAffinity: None
  type: ClusterIP
