Compliance/gx-compliance-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: gx-compliance-live-server
  namespace: gxdch
spec:
  rules:
  - host: compliance.gaia-x.eu
    http:
      paths:
      - backend:
          service:
            name: gx-compliance-main
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: gx-compliance-live-server-2206
            port:
              number: 80
        path: /v2206/
        pathType: Prefix
      - backend:
          service:
            name: gx-compliance-live-server-2204
            port:
              number: 80
        path: /v2204/
        pathType: Prefix
  tls:
  - hosts:
    - compliance.gaia-x.eu
    secretName: gx-compliance-live-server-tls-secret
